@@ -257,7 +257,7 @@ EOF
     # Add postfix alias for user: amavis.
     if [ ! -z ${MAIL_ALIAS_ROOT} ]; then
         echo "${AMAVISD_SYS_USER}: root" >> ${POSTFIX_FILE_ALIASES}
-        postalias hash:${POSTFIX_FILE_ALIASES} 2>/dev/null
+        postalias hash:${POSTFIX_FILE_ALIASES} &>/dev/null
     else
         :
     fi
