@@ -104,6 +104,10 @@ plugin {
     expire = Trash 7 Trash/* 7 Junk 30
     expire_dict = proxy::expire
 
+    # ACL and share folder
+    acl = vfile
+    acl_shared_dict = proxy::acl
+
     # Pigeonhole managesieve service.
     # Reference: http://wiki2.dovecot.org/Pigeonhole/Sieve/Configuration
     # Per-user sieve settings.
@@ -137,6 +141,7 @@ service dict {
 dict {
     expire = db:/var/lib/dovecot/expire/expire.db
     quotadict = PH_DOVECOT_REALTIME_QUOTA_SQLTYPE:PH_DOVECOT_REALTIME_QUOTA_CONF
+    acl = PH_DOVECOT_SHARE_FOLDER_SQLTYPE:PH_DOVECOT_SHARE_FOLDER_CONF
 }
 
 protocol lda {
@@ -155,4 +160,21 @@ protocol pop3 {
     mail_plugins = quota
     pop3_client_workarounds = outlook-no-nuls oe-ns-eoh
     pop3_uidl_format = %08Xu%08Xv
+}
+namespace {
+    type = private
+    separator = /
+    prefix =
+    #location defaults to mail_location.
+    inbox = yes
+}
+
+namespace {
+    type = shared
+    separator = /
+    prefix = Shared/%%u/
+    location = maildir:/%%Lh/Maildir/:INDEX=/%%Lh/Maildir/Shared/%%u
+    # this namespace should handle its own subscriptions or not.
+    subscriptions = yes
+    list = children
 }
