@@ -1,4 +1,6 @@
 iRedMail-0.8.0-beta3:
+    * It now works on Linux Mint 12 (code name: lisa).
+    * Add share folder support within Dovecot 2.
     * Fixed:
         + Two Dovecot config files are world readable: used_quota.conf,
           share-folder.conf.
